READ 항목 tag 기준으로 수정

--- a/_posts/2023-11-02-DeepMind.md
+++ b/_posts/2023-11-02-DeepMind.md
@@ -11,7 +11,8 @@ values:
 toc: true
 toc_sticky: true
 toc_label: "Behind DEEPMIND"
----  
+tags: [AI, Business]
+---
 
 ### 딥마인드같은 회사는 어떻게 만들어졌는가?
 
@@ -24,16 +25,10 @@ toc_label: "Behind DEEPMIND"
 - 졸업 이후, Lionhead라는 게임 회사에서 lead AI 프로그래머로 활동한다.
 - 1998년, 엘릭서 스튜디오라는 비디오 게임 개발사를 창업한 이후 2005년 은퇴하였다.
 - 이후 2009년, UCL에서 인지 신경과학 박사학위를 취득했으며, MIT 방문 과학자로 활동했다.
-    
-    → 그의 초기 연구는 상상-기억-기억상실증과 관련되어 있었다.
-    
+  → 그의 초기 연구는 상상-기억-기억상실증과 관련되어 있었다.
 - 2010년, DeepMind라는 머신 러닝 스타트업을 창업하였다.
-    
-    > “Solve Intelligence to Solve Everything Else”
-    > 
-    
-    → 현재에 이르러, 일반 인공지능 AGI를 창조하는 것을 목표로 삼고 있다.
-    
+  > “Solve Intelligence to Solve Everything Else”
+  → 현재에 이르러, 일반 인공지능 AGI를 창조하는 것을 목표로 삼고 있다.
 
 ### 왜 구글은 딥마인드를 인수했는가?
 
