--- a/_posts/2023-11-02-DeepMind.md
+++ b/_posts/2023-11-02-DeepMind.md
@@ -11,6 +11,7 @@ values:
 toc: true
 toc_sticky: true
 toc_label: "Behind DEEPMIND"
+category: "Motivation"
 tags: [AI, Business]
 ---
 
@@ -28,7 +29,7 @@ tags: [AI, Business]
   → 그의 초기 연구는 상상-기억-기억상실증과 관련되어 있었다.
 - 2010년, DeepMind라는 머신 러닝 스타트업을 창업하였다.
   > “Solve Intelligence to Solve Everything Else”
-  → 현재에 이르러, 일반 인공지능 AGI를 창조하는 것을 목표로 삼고 있다.
+  > → 현재에 이르러, 일반 인공지능 AGI를 창조하는 것을 목표로 삼고 있다.
 
 ### 왜 구글은 딥마인드를 인수했는가?
 
